@@ -21,6 +21,7 @@ exportClasses(CompoundNameFilter)
 exportMethods(dbconn)
 exportMethods(show)
 exportMethods(spectra)
+exportMethods(supportedFilters)
 importClassesFrom(AnnotationFilter,AnnotationFilter)
 importClassesFrom(AnnotationFilter,AnnotationFilterList)
 importClassesFrom(AnnotationFilter,CharacterFilter)
@@ -58,5 +59,6 @@ importFrom(xml2,xml_find_first)
 importFrom(xml2,xml_text)
 importMethodsFrom(AnnotationFilter,condition)
 importMethodsFrom(AnnotationFilter,logicOp)
+importMethodsFrom(AnnotationFilter,supportedFilters)
 importMethodsFrom(AnnotationFilter,value)
 importMethodsFrom(BiocGenerics,dbconn)
