@@ -1,6 +1,7 @@
 Changes in version 0.2.0
 
 - Re-use Spectra object from MSnbase
+- Add supportedFilters,CompDb method.
 
 
 Changes in version 0.1.1
